# sipandu-CLI

./: LICENSE  README.md  pyproject.toml
sipandu/: main.py  task.py  ticket.py  utils.py
