[tool.poetry]
name = "sipandu"
version = "0.0.1"
description = "sipandu-CLI"
authors = ["fhmlsml <me@fhmisml.moe>"]
readme = "README.md"

[tool.poetry.scripts]
sipandu = "sipandu.main:sipandu"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
lxml = "^4.9.3"
bs4 = "^0.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
